[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/StateBlock.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/StatBlock.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/SkillBlock.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/Summary.gd" type="Script" id=4]
[ext_resource path="res://src/UI/CommonComponents/ChoiceMenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/Theme.tres" type="Theme" id=6]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/Movement.gd" type="Script" id=7]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/State.gd" type="Script" id=8]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/State2.gd" type="Script" id=9]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/LanguageContainer.gd" type="Script" id=10]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/ToolContainer.gd" type="Script" id=11]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/Feats.gd" type="Script" id=12]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/ItemList.gd" type="Script" id=13]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/PassivePerceptionEdit.gd" type="Script" id=14]

[node name="Summary" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
script = ExtResource( 4 )

[node name="Summary" type="HBoxContainer" parent="."]
margin_right = 1912.0
margin_bottom = 350.0
size_flags_horizontal = 3

[node name="Left" type="VBoxContainer" parent="Summary"]
margin_right = 954.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharacterInfo" type="VBoxContainer" parent="Summary/Left"]
margin_right = 954.0
margin_bottom = 136.0
size_flags_horizontal = 3

[node name="CharacterChoices" type="GridContainer" parent="Summary/Left/CharacterInfo" groups=["Persist"]]
margin_right = 954.0
margin_bottom = 136.0
size_flags_horizontal = 3
columns = 4

[node name="Name" type="Label" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_top = 5.0
margin_right = 71.0
margin_bottom = 19.0
text = "Name: "

[node name="NameEnter" type="LineEdit" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 75.0
margin_right = 469.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 14 )
size_flags_horizontal = 3
align = 1

[node name="Class" type="Label" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 473.0
margin_top = 5.0
margin_right = 557.0
margin_bottom = 19.0
text = "Class: "

[node name="ClassChoice" parent="Summary/Left/CharacterInfo/CharacterChoices" instance=ExtResource( 5 )]
margin_left = 561.0
margin_right = 954.0
margin_bottom = 24.0
size_flags_horizontal = 3
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false ]
json_choice = "classes"

[node name="Race" type="Label" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_top = 33.0
margin_right = 71.0
margin_bottom = 47.0
text = "Race: "

[node name="RaceChoice" parent="Summary/Left/CharacterInfo/CharacterChoices" instance=ExtResource( 5 )]
margin_left = 75.0
margin_top = 28.0
margin_right = 469.0
margin_bottom = 52.0
size_flags_horizontal = 3
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false ]
json_choice = "races"

[node name="Height" type="Label" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 473.0
margin_top = 33.0
margin_right = 557.0
margin_bottom = 47.0
text = "Height: "

[node name="HeightEnter" type="LineEdit" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 561.0
margin_top = 28.0
margin_right = 954.0
margin_bottom = 52.0
rect_min_size = Vector2( 200, 14 )
size_flags_horizontal = 3
align = 1

[node name="Hair" type="Label" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_top = 61.0
margin_right = 71.0
margin_bottom = 75.0
text = "Hair Color: "

[node name="HairEnter" type="LineEdit" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 75.0
margin_top = 56.0
margin_right = 469.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 14 )
size_flags_horizontal = 3
align = 1

[node name="Eyes" type="Label" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 473.0
margin_top = 61.0
margin_right = 557.0
margin_bottom = 75.0
text = "Eye Color: "

[node name="EyeEnter" type="LineEdit" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 561.0
margin_top = 56.0
margin_right = 954.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 14 )
size_flags_horizontal = 3
align = 1

[node name="Age" type="Label" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_top = 89.0
margin_right = 71.0
margin_bottom = 103.0
text = "Age: "

[node name="AgeEnter" type="LineEdit" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 75.0
margin_top = 84.0
margin_right = 469.0
margin_bottom = 108.0
rect_min_size = Vector2( 200, 14 )
size_flags_horizontal = 3
align = 1

[node name="Level" type="Label" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 473.0
margin_top = 89.0
margin_right = 557.0
margin_bottom = 103.0
text = "Level: "

[node name="LevelEdit" type="LineEdit" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 561.0
margin_top = 84.0
margin_right = 954.0
margin_bottom = 108.0
rect_min_size = Vector2( 120, 14 )
size_flags_horizontal = 3
align = 1

[node name="Sex" type="Label" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_top = 117.0
margin_right = 71.0
margin_bottom = 131.0
text = "Sex: "

[node name="SexEdit" type="LineEdit" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 75.0
margin_top = 112.0
margin_right = 469.0
margin_bottom = 136.0
rect_min_size = Vector2( 120, 14 )
size_flags_horizontal = 3
align = 1

[node name="Weight" type="Label" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 473.0
margin_top = 117.0
margin_right = 557.0
margin_bottom = 131.0
text = "Weight [lbs]: "

[node name="WeightEdit" type="LineEdit" parent="Summary/Left/CharacterInfo/CharacterChoices"]
margin_left = 561.0
margin_top = 112.0
margin_right = 954.0
margin_bottom = 136.0
rect_min_size = Vector2( 120, 14 )
size_flags_horizontal = 3
align = 1

[node name="HSeparator" type="HSeparator" parent="Summary/Left"]
margin_top = 140.0
margin_right = 954.0
margin_bottom = 144.0

[node name="StatBlock" parent="Summary/Left" groups=["Persist"] instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 148.0
margin_right = 954.0
margin_bottom = 162.0

[node name="HSeparator2" type="HSeparator" parent="Summary/Left"]
margin_top = 166.0
margin_right = 954.0
margin_bottom = 170.0

[node name="StateBlock" parent="Summary/Left" groups=["Persist"] instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 174.0
margin_right = 954.0
margin_bottom = 174.0

[node name="HSeparator3" type="HSeparator" parent="Summary/Left"]
margin_top = 178.0
margin_right = 954.0
margin_bottom = 182.0

[node name="TabSummaries" type="HBoxContainer" parent="Summary/Left"]
margin_top = 186.0
margin_right = 954.0
margin_bottom = 350.0
size_flags_vertical = 3
alignment = 1

[node name="Equipment" type="VBoxContainer" parent="Summary/Left/TabSummaries"]
margin_right = 300.0
margin_bottom = 164.0
rect_min_size = Vector2( 300, 50 )
size_flags_vertical = 3

[node name="Label" type="Label" parent="Summary/Left/TabSummaries/Equipment"]
margin_right = 300.0
margin_bottom = 14.0
text = "Equipped Items:"

[node name="HSeparator" type="HSeparator" parent="Summary/Left/TabSummaries/Equipment"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 22.0

[node name="ItemList" type="ScrollContainer" parent="Summary/Left/TabSummaries/Equipment"]
margin_top = 26.0
margin_right = 300.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="Summary/Left/TabSummaries/Equipment/ItemList"]
margin_right = 300.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 13 )

[node name="SpellsAndFeats" type="VBoxContainer" parent="Summary/Left/TabSummaries"]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 164.0
rect_min_size = Vector2( 300, 50 )
size_flags_vertical = 3

[node name="Label" type="Label" parent="Summary/Left/TabSummaries/SpellsAndFeats"]
margin_right = 300.0
margin_bottom = 14.0
text = "Prepared Spells:"

[node name="HSeparator" type="HSeparator" parent="Summary/Left/TabSummaries/SpellsAndFeats"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 22.0

[node name="VBoxContainer" type="ScrollContainer" parent="Summary/Left/TabSummaries/SpellsAndFeats"]
margin_top = 26.0
margin_right = 300.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreparedSpells" type="ItemList" parent="Summary/Left/TabSummaries/SpellsAndFeats/VBoxContainer"]
margin_right = 300.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="Summary/Left/TabSummaries/SpellsAndFeats"]
margin_top = 84.0
margin_right = 300.0
margin_bottom = 98.0
text = "Feats:"

[node name="HSeparator2" type="HSeparator" parent="Summary/Left/TabSummaries/SpellsAndFeats"]
margin_top = 102.0
margin_right = 300.0
margin_bottom = 106.0

[node name="VBoxContainer2" type="ScrollContainer" parent="Summary/Left/TabSummaries/SpellsAndFeats"]
margin_top = 110.0
margin_right = 300.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Feats" type="ItemList" parent="Summary/Left/TabSummaries/SpellsAndFeats/VBoxContainer2"]
margin_right = 300.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 12 )

[node name="LanguagesAndTools" type="VBoxContainer" parent="Summary/Left/TabSummaries"]
margin_left = 608.0
margin_right = 954.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Summary/Left/TabSummaries/LanguagesAndTools"]
margin_right = 346.0
margin_bottom = 14.0
text = "Languages:"

[node name="HSeparator" type="HSeparator" parent="Summary/Left/TabSummaries/LanguagesAndTools"]
margin_top = 18.0
margin_right = 346.0
margin_bottom = 22.0

[node name="ScrollBox" type="ScrollContainer" parent="Summary/Left/TabSummaries/LanguagesAndTools"]
margin_top = 26.0
margin_right = 346.0
margin_bottom = 76.0
rect_min_size = Vector2( 300, 50 )
size_flags_vertical = 3

[node name="LanguageContainer" type="VBoxContainer" parent="Summary/Left/TabSummaries/LanguagesAndTools/ScrollBox" groups=["Persist"]]
margin_right = 346.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 10 )

[node name="HSeparator3" type="HSeparator" parent="Summary/Left/TabSummaries/LanguagesAndTools"]
margin_top = 80.0
margin_right = 346.0
margin_bottom = 84.0

[node name="Label2" type="Label" parent="Summary/Left/TabSummaries/LanguagesAndTools"]
margin_top = 88.0
margin_right = 346.0
margin_bottom = 102.0
text = "Tool Proficiencies:"

[node name="HSeparator2" type="HSeparator" parent="Summary/Left/TabSummaries/LanguagesAndTools"]
margin_top = 106.0
margin_right = 346.0
margin_bottom = 110.0

[node name="ScrollBox2" type="ScrollContainer" parent="Summary/Left/TabSummaries/LanguagesAndTools"]
margin_top = 114.0
margin_right = 346.0
margin_bottom = 164.0
rect_min_size = Vector2( 300, 50 )
size_flags_vertical = 3

[node name="ToolContainer" type="VBoxContainer" parent="Summary/Left/TabSummaries/LanguagesAndTools/ScrollBox2" groups=["Persist"]]
margin_right = 346.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 11 )

[node name="Right" type="VBoxContainer" parent="Summary"]
margin_left = 958.0
margin_right = 1912.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Movement" type="HBoxContainer" parent="Summary/Right" groups=["Persist"]]
margin_right = 954.0
margin_bottom = 24.0
script = ExtResource( 7 )

[node name="WalkSpeed" type="Label" parent="Summary/Right/Movement"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Walk: "

[node name="WalkEnter" type="LineEdit" parent="Summary/Right/Movement"]
margin_left = 43.0
margin_right = 236.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 14 )
size_flags_horizontal = 3
align = 2

[node name="WalkSpeed2" type="Label" parent="Summary/Right/Movement"]
margin_left = 240.0
margin_top = 5.0
margin_right = 285.0
margin_bottom = 19.0
text = "Climb: "

[node name="ClimbEnter" type="LineEdit" parent="Summary/Right/Movement"]
margin_left = 289.0
margin_right = 483.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 14 )
size_flags_horizontal = 3
align = 2

[node name="WalkSpeed3" type="Label" parent="Summary/Right/Movement"]
margin_left = 487.0
margin_top = 5.0
margin_right = 529.0
margin_bottom = 19.0
text = "Swim: "

[node name="SwimEnter" type="LineEdit" parent="Summary/Right/Movement"]
margin_left = 533.0
margin_right = 726.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 14 )
size_flags_horizontal = 3
align = 2

[node name="WalkSpeed4" type="Label" parent="Summary/Right/Movement"]
margin_left = 730.0
margin_top = 5.0
margin_right = 756.0
margin_bottom = 19.0
text = "Fly: "

[node name="FlyEnter" type="LineEdit" parent="Summary/Right/Movement"]
margin_left = 760.0
margin_right = 954.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 14 )
size_flags_horizontal = 3
align = 2

[node name="MoneyAndExp" type="HBoxContainer" parent="Summary/Right"]
margin_top = 28.0
margin_right = 954.0
margin_bottom = 52.0

[node name="cp" type="Label" parent="Summary/Right/MoneyAndExp"]
margin_top = 5.0
margin_right = 23.0
margin_bottom = 19.0
hint_tooltip = "cp: 1, sp: 1/10, ep: 1/50, gp: 1/100, pt: 1/1000"
mouse_filter = 1
text = "cp: "

[node name="cpDisp" type="LineEdit" parent="Summary/Right/MoneyAndExp"]
margin_left = 27.0
margin_right = 153.0
margin_bottom = 24.0
rect_min_size = Vector2( 35, 24 )
hint_tooltip = "cp: 1, sp: 1/10, ep: 1/50, gp: 1/100, pt: 1/1000
To add money, please make an entry in the transaction log"
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
align = 2
editable = false

[node name="sp" type="Label" parent="Summary/Right/MoneyAndExp"]
margin_left = 157.0
margin_top = 5.0
margin_right = 180.0
margin_bottom = 19.0
hint_tooltip = "cp: 10, sp: 1, ep: 1/5, gp: 1/10, pt: 1/100"
mouse_filter = 1
text = "sp: "

[node name="spDisp" type="LineEdit" parent="Summary/Right/MoneyAndExp"]
margin_left = 184.0
margin_right = 310.0
margin_bottom = 24.0
rect_min_size = Vector2( 35, 24 )
hint_tooltip = "cp: 10, sp: 1, ep: 1/5, gp: 1/10, pt: 1/100
To add money, please make an entry in the transaction log"
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
align = 2
editable = false

[node name="ep" type="Label" parent="Summary/Right/MoneyAndExp"]
margin_left = 314.0
margin_top = 5.0
margin_right = 338.0
margin_bottom = 19.0
hint_tooltip = "cp: 50, sp: 5, ep: 1, gp: 1/2, pt: 1/20"
mouse_filter = 1
text = "ep: "

[node name="epDisp" type="LineEdit" parent="Summary/Right/MoneyAndExp"]
margin_left = 342.0
margin_right = 469.0
margin_bottom = 24.0
rect_min_size = Vector2( 35, 24 )
hint_tooltip = "cp: 50, sp: 5, ep: 1, gp: 1/2, pt: 1/20
To add money, please make an entry in the transaction log"
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
align = 2
editable = false

[node name="gp" type="Label" parent="Summary/Right/MoneyAndExp"]
margin_left = 473.0
margin_top = 5.0
margin_right = 496.0
margin_bottom = 19.0
hint_tooltip = "cp: 100, sp: 10, ep: 2, gp: 1, pt: 1/10"
mouse_filter = 1
text = "gp: "

[node name="gpDisp" type="LineEdit" parent="Summary/Right/MoneyAndExp"]
margin_left = 500.0
margin_right = 626.0
margin_bottom = 24.0
rect_min_size = Vector2( 35, 24 )
hint_tooltip = "cp: 100, sp: 10, ep: 2, gp: 1, pt: 1/10
To add money, please make an entry in the transaction log"
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
align = 2
editable = false

[node name="pp" type="Label" parent="Summary/Right/MoneyAndExp"]
margin_left = 630.0
margin_top = 5.0
margin_right = 654.0
margin_bottom = 19.0
hint_tooltip = "cp: 1000, sp: 100, ep: 20, gp: 10, pt: 1"
mouse_filter = 1
text = "pp: "

[node name="ppDisp" type="LineEdit" parent="Summary/Right/MoneyAndExp"]
margin_left = 658.0
margin_right = 784.0
margin_bottom = 24.0
rect_min_size = Vector2( 35, 24 )
hint_tooltip = "cp: 1000, sp: 100, ep: 20, gp: 10, pt: 1
To add money, please make an entry in the transaction log"
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
align = 2
editable = false

[node name="exp" type="Label" parent="Summary/Right/MoneyAndExp"]
margin_left = 788.0
margin_top = 5.0
margin_right = 823.0
margin_bottom = 19.0
hint_tooltip = "Calculated from experience transactions"
mouse_filter = 1
text = "exp:  "

[node name="expDisp" type="LineEdit" parent="Summary/Right/MoneyAndExp"]
margin_left = 827.0
margin_right = 954.0
margin_bottom = 24.0
rect_min_size = Vector2( 35, 24 )
hint_tooltip = "cp: 1000, sp: 100, ep: 20, gp: 10, pt: 1
To add money, please make an entry in the transaction log"
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
align = 2
editable = false

[node name="State" type="HBoxContainer" parent="Summary/Right" groups=["Persist"]]
margin_top = 56.0
margin_right = 954.0
margin_bottom = 106.0
rect_min_size = Vector2( 770, 50 )
script = ExtResource( 8 )

[node name="HP" type="Label" parent="Summary/Right/State"]
margin_top = 18.0
margin_right = 30.0
margin_bottom = 32.0
mouse_filter = 1
text = "HP:  "

[node name="hpEdit" type="LineEdit" parent="Summary/Right/State"]
margin_left = 34.0
margin_right = 109.0
margin_bottom = 50.0
rect_min_size = Vector2( 35, 24 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
align = 2

[node name="MaxHP" type="Label" parent="Summary/Right/State"]
margin_left = 113.0
margin_top = 18.0
margin_right = 173.0
margin_bottom = 32.0
mouse_filter = 1
text = "Max HP:  "

[node name="maxHPEdit" type="LineEdit" parent="Summary/Right/State"]
margin_left = 177.0
margin_right = 253.0
margin_bottom = 50.0
rect_min_size = Vector2( 35, 24 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
align = 2

[node name="TempHP" type="Label" parent="Summary/Right/State"]
margin_left = 257.0
margin_top = 18.0
margin_right = 327.0
margin_bottom = 32.0
mouse_filter = 1
text = "Temp HP:  "

[node name="tempHPEdit" type="LineEdit" parent="Summary/Right/State"]
margin_left = 331.0
margin_right = 406.0
margin_bottom = 50.0
rect_min_size = Vector2( 35, 24 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
align = 2

[node name="HitDie" type="Label" parent="Summary/Right/State"]
margin_left = 410.0
margin_top = 18.0
margin_right = 463.0
margin_bottom = 32.0
mouse_filter = 1
text = "Hit Die: "

[node name="hitDieEdit" type="LineEdit" parent="Summary/Right/State"]
margin_left = 467.0
margin_right = 543.0
margin_bottom = 50.0
rect_min_size = Vector2( 35, 24 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
align = 2

[node name="ProficiencyBonus" type="Label" parent="Summary/Right/State"]
margin_left = 547.0
margin_top = 18.0
margin_right = 669.0
margin_bottom = 32.0
mouse_filter = 1
text = "Proficiency Bonus: "

[node name="ProficiencyEdit" type="LineEdit" parent="Summary/Right/State"]
margin_left = 673.0
margin_right = 749.0
margin_bottom = 50.0
rect_min_size = Vector2( 35, 24 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
align = 2
editable = false

[node name="PassivePerception" type="Label" parent="Summary/Right/State"]
margin_left = 753.0
margin_top = 18.0
margin_right = 874.0
margin_bottom = 32.0
mouse_filter = 1
text = "Passive Perception"

[node name="PassivePerceptionEdit" type="LineEdit" parent="Summary/Right/State"]
margin_left = 878.0
margin_right = 954.0
margin_bottom = 50.0
rect_min_size = Vector2( 35, 24 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
align = 2
editable = false
script = ExtResource( 14 )

[node name="State2" type="HBoxContainer" parent="Summary/Right" groups=["Persist"]]
margin_top = 110.0
margin_right = 954.0
margin_bottom = 134.0
script = ExtResource( 9 )

[node name="AC" type="Label" parent="Summary/Right/State2"]
margin_top = 5.0
margin_right = 25.0
margin_bottom = 19.0
mouse_filter = 1
text = "AC: "

[node name="acEdit" type="LineEdit" parent="Summary/Right/State2"]
margin_left = 29.0
margin_right = 87.0
margin_bottom = 24.0
rect_min_size = Vector2( 35, 24 )
mouse_filter = 1
mouse_default_cursor_shape = 0
align = 2

[node name="BloodiedButton" type="CheckBox" parent="Summary/Right/State2"]
margin_left = 91.0
margin_right = 182.0
margin_bottom = 24.0
hint_tooltip = "Automatically trips when health drops below 50% of max.
Please don't touch."
mouse_filter = 1
custom_colors/font_color_disabled = Color( 0.839216, 0.839216, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "Bloodied?"
align = 1
icon_align = 1

[node name="LifeSavingThrows" type="Panel" parent="Summary/Right/State2"]
margin_left = 186.0
margin_right = 336.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
hint_tooltip = "Whenever you start your turn with 0 hit points, you must make a special saving throw, called a death saving
throw, to determine whether you creep closer to death or hang onto life. 
Unlike other saving throws, this one isn’t tied to any ability score. 
You are in the hands of fate now, aided only by spells and features that improve your chances of succeeding on a saving throw.
Roll a d20. If the roll is 10 or higher, you succeed.
Otherwise, you fail. A success or failure has no effect by itself. 
On your third success, you become stable (see below). 
On your third failure, you die. 
The successes and failures don't need to be consecutive; keep track of both until you collect three of a kind. 
The number of both is reset to zero w hen you regain any hit points or become stable.

===== Rolling 1 or 20. 
When you make a death saving throw and roll a 1 on the d20, it counts as two failures. 
If you roll a 20 on the d20, you regain 1 hit point.

===== Damage at 0 Hit Points. 
If you take any damage while you have 0 hit points, you suffer a death saving throw failure. 
If the damage is from a critical hit, you suffer two failures instead. 
If the damage equals or exceeds your hit point maximum, you suffer instant death."

[node name="ColorRect" type="ColorRect" parent="Summary/Right/State2/LifeSavingThrows"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Summary/Right/State2/LifeSavingThrows"]
margin_right = 151.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 24 )

[node name="Label" type="Label" parent="Summary/Right/State2/LifeSavingThrows/HBoxContainer"]
margin_top = 5.0
margin_right = 67.0
margin_bottom = 19.0
text = "Life Saves:"

[node name="LIFE1" type="CheckBox" parent="Summary/Right/State2/LifeSavingThrows/HBoxContainer"]
margin_left = 71.0
margin_right = 95.0
margin_bottom = 24.0
mouse_filter = 1
align = 1
icon_align = 1

[node name="LIFE2" type="CheckBox" parent="Summary/Right/State2/LifeSavingThrows/HBoxContainer"]
margin_left = 99.0
margin_right = 123.0
margin_bottom = 24.0
mouse_filter = 1
align = 1
icon_align = 1

[node name="LIFE3" type="CheckBox" parent="Summary/Right/State2/LifeSavingThrows/HBoxContainer"]
margin_left = 127.0
margin_right = 151.0
margin_bottom = 24.0
mouse_filter = 1
align = 1
icon_align = 1

[node name="DeathSavingThrows" type="Panel" parent="Summary/Right/State2"]
margin_left = 340.0
margin_right = 510.0
margin_bottom = 24.0
rect_min_size = Vector2( 170, 0 )
hint_tooltip = "Whenever you start your turn with 0 hit points, you must make a special saving throw, called a death saving
throw, to determine whether you creep closer to death or hang onto life. 
Unlike other saving throws, this one isn’t tied to any ability score. 
You are in the hands of fate now, aided only by spells and features that improve your chances of succeeding on a saving throw.
Roll a d20. If the roll is 10 or higher, you succeed.
Otherwise, you fail. A success or failure has no effect by itself. 
On your third success, you become stable (see below). 
On your third failure, you die. 
The successes and failures don't need to be consecutive; keep track of both until you collect three of a kind. 
The number of both is reset to zero w hen you regain any hit points or become stable.

===== Rolling 1 or 20. 
When you make a death saving throw and roll a 1 on the d20, it counts as two failures. 
If you roll a 20 on the d20, you regain 1 hit point.

===== Damage at 0 Hit Points. 
If you take any damage while you have 0 hit points, you suffer a death saving throw failure. 
If the damage is from a critical hit, you suffer two failures instead. 
If the damage equals or exceeds your hit point maximum, you suffer instant death."

[node name="ColorRect" type="ColorRect" parent="Summary/Right/State2/DeathSavingThrows"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Summary/Right/State2/DeathSavingThrows"]
margin_right = 151.0
margin_bottom = 24.0
rect_min_size = Vector2( 170, 24 )

[node name="Label" type="Label" parent="Summary/Right/State2/DeathSavingThrows/HBoxContainer"]
margin_top = 5.0
margin_right = 82.0
margin_bottom = 19.0
text = "Death Saves:"

[node name="DEATH1" type="CheckBox" parent="Summary/Right/State2/DeathSavingThrows/HBoxContainer"]
margin_left = 86.0
margin_right = 110.0
margin_bottom = 24.0
mouse_filter = 1
align = 1
icon_align = 1

[node name="DEATH2" type="CheckBox" parent="Summary/Right/State2/DeathSavingThrows/HBoxContainer"]
margin_left = 114.0
margin_right = 138.0
margin_bottom = 24.0
mouse_filter = 1
align = 1
icon_align = 1

[node name="DEATH3" type="CheckBox" parent="Summary/Right/State2/DeathSavingThrows/HBoxContainer"]
margin_left = 142.0
margin_right = 166.0
margin_bottom = 24.0
mouse_filter = 1
align = 1
icon_align = 1

[node name="Inspired" type="CheckBox" parent="Summary/Right/State2"]
margin_left = 514.0
margin_right = 617.0
margin_bottom = 24.0
mouse_filter = 1
custom_colors/font_color_pressed = Color( 0.0784314, 1, 0.180392, 1 )
text = "Inspiration?"
align = 1
icon_align = 1

[node name="Encumbered" type="CheckBox" parent="Summary/Right/State2"]
margin_left = 621.0
margin_right = 770.0
margin_bottom = 24.0
mouse_filter = 1
text = "Over Encumbered?"
align = 1
icon_align = 1

[node name="HSeparator" type="HSeparator" parent="Summary/Right"]
margin_top = 138.0
margin_right = 954.0
margin_bottom = 142.0

[node name="Skills" type="VBoxContainer" parent="Summary/Right"]
margin_top = 146.0
margin_right = 954.0
margin_bottom = 160.0

[node name="SkillBlock" parent="Summary/Right/Skills" groups=["Persist"] instance=ExtResource( 3 )]
margin_right = 954.0
margin_bottom = 14.0

[connection signal="class_updated" from="Summary/Left/CharacterInfo/CharacterChoices/ClassChoice" to="." method="_on_ClassChoice_class_updated"]
[connection signal="text_changed" from="Summary/Left/CharacterInfo/CharacterChoices/LevelEdit" to="." method="_on_LevelEdit_text_changed"]
[connection signal="text_entered" from="Summary/Right/State/hpEdit" to="." method="_on_hpEdit_text_entered"]
